with mail icon (latest icons.scss file)

--- a/assets/stylesheets/common/_icons.scss
+++ b/assets/stylesheets/common/_icons.scss
@@ -55,6 +55,9 @@
 .icon-info_outline:before {
   content: "\e88f";
 }
+.icon-mail:before {
+  content: "\e0e1";
+}
 .icon-menu2:before {
   content: "\e5d2";
 }
@@ -66,6 +69,9 @@
 }
 .icon-volume_up:before {
   content: "\e050";
+}
+.icon-key:before {
+  content: "\e0da";
 }
 .icon-id-badge:before {
   content: "\e900";
@@ -145,3 +151,4 @@
 .icon-cross:before {
   content: "\e908";
 }
+
