--- a/assets/stylesheets/_common.scss
+++ b/assets/stylesheets/_common.scss
@@ -2,7 +2,7 @@
  * Common v0.0.1
  * Copyright 2018- YugenTrade, Inc.
  * When updating this Gem, increment the version number
- * in /common-assets/version.rb
+ * in /common_assets/version.rb
  */
 
 
