Render without layout

--- a/app/views/layouts/layout.html.erb
+++ b/app/views/layouts/layout.html.erb
@@ -10,13 +10,13 @@
 </head>
 
 <body id="pages" class="pages">
-    <%= render 'shared/header' %>
+    <%= render 'common_assets/shared/header' %>
 
     <div id="wrap">
         <div class="container">
             <%= yield %>
 
-            <%= render 'shared/footer' %>
+            <%= render 'common_assets/shared/footer' %>
         </div>
     </div>
 </body>
