Simplified error management

--- a/app/views/layouts/error.html.erb
+++ b/app/views/layouts/error.html.erb
@@ -5,8 +5,8 @@
             422 - The change you wanted was rejected - YugenTrade
     </title>
     <meta name="robots" content="noindex">
+    <link rel="stylesheet" href="http://status.digibitx.com/assets/application-b0ad9ac34bc2ef55116254458a7dd26b414727f020b6eb0464937e753c00053c.css">
 
-    <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
 </head>
 
 <body id="pages" class="pages">
