Updated title for error pages

--- a/app/views/layouts/error.html.erb
+++ b/app/views/layouts/error.html.erb
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>
-            422 - The change you wanted was rejected - YugenTrade
+            Uh! oh! You've broken the site - YugenTrade
     </title>
     <meta name="robots" content="noindex">
-    <link rel="stylesheet" href="http://status.digibitx.com/assets/application-b0ad9ac34bc2ef55116254458a7dd26b414727f020b6eb0464937e753c00053c.css">
+    <link rel="stylesheet" href="https://dbx-oauth.digibitx.com/assets/web-2e86c0798959181d7c0955c12cfc4a9cd2c5406a15da033a595b0379af588343.css">
 
 </head>
 
