Added link to status and centered message

--- a/app/views/common_assets/shared/_footer.html.erb
+++ b/app/views/common_assets/shared/_footer.html.erb
@@ -1,11 +1,11 @@
 <footer class="footer">
     <ul class="links-foot">
-      <li><a href="/pages/about">About</a></li>
-      <li><a href="/pages/terms-of-service">Terms Of Service</a></li>
-      <li><a href="/pages/privacy">Privacy</a></li>
-      <li><a href="/pages/fees">Fees</a></li>
-      <li><a href="/status">Status</a></li>
-      <li><a href="/pages/contact">Contact</a></li>
+      <li><a href="https://dbx-cms.digibitx.com/pages/about">About</a></li>
+      <li><a href="https://dbx-cms.digibitx.com/pages/terms-of-service">Terms Of Service</a></li>
+      <li><a href="https://dbx-cms.digibitx.com/pages/privacy">Privacy</a></li>
+      <li><a href="https://dbx-cms.digibitx.com/pages/fees">Fees</a></li>
+      <li><a href="https://dbx-cms.digibitx.com/status">Status</a></li>
+      <li><a href="https://dbx-cms.digibitx.com/pages/contact">Contact</a></li>
     </ul>
 
     <ul class="social-foot">
