--- a/app/views/layouts/error.html.erb
+++ b/app/views/layouts/error.html.erb
@@ -6,18 +6,26 @@
     </title>
     <meta name="robots" content="noindex">
     <link rel="stylesheet" href="https://dbx-oauth.digibitx.com/assets/web-2e86c0798959181d7c0955c12cfc4a9cd2c5406a15da033a595b0379af588343.css">
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/core.js">></script>
 </head>
 
-<body id="pages" class="pages">
+<body id="pages" class="devise">
     <%= render 'common_assets/shared/header' %>
 
-    <div id="wrap">
-        <div class="container">
-            <%= yield %>
-
-            <%= render 'common_assets/shared/footer' %>
+    <div class="container-fluid">
+        <div class="row justify-content-center h-100">
+            <div class="main-card my-auto w-100">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row justify-content-center">
+                            <%= yield %>
+                        </div>
+                    </div>
+                </div>
+                <%= render 'common_assets/shared/footer' %>
+            </div>
         </div>
     </div>
+            
 </body>
 </html>
