--- a/app/views/common_assets/exceptions/show.html.erb
+++ b/app/views/common_assets/exceptions/show.html.erb
@@ -1,6 +1,17 @@
-<div class="width: 100%; max-width: 640px; margin: 10px auto 30px;">
-    <h1>Uh! oh! You've broken the site</h1>
-
-    <p>Don't worry, have a donut and try again later</p>
-
+<div class="col-xs-12 col-sm-11 col-md-12 mt-5 mb-3">
+    <div class="text-center">
+        <div class="d-flex justify-content-center">
+            <h2 class="wrap">
+                Uh! oh! You've broken the site
+            </h2>
+        </div>
+    </div>
+</div>
+<div class="col-12">
+    <div class="text-center">
+        <div class="wrap">
+            <p><small>Don't worry, have a donut and try again later</small></p>
+            <p><small>For more information, checkout <a href="https://status.digibitx.com" style="color:#ffbc00;font-weight:bold;">status</a></small>.</p>
+        </div>
+    </div>
 </div>
