--- a/app/views/common_assets/shared/_header.html.erb
+++ b/app/views/common_assets/shared/_header.html.erb
@@ -1,11 +1,11 @@
 
 
 <nav class="navbar navbar-expand-md fixed-top">
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" href="https://dbx-core.digibitx.com/">
         <i class="icon-ygt-logo"></i>
         <span>YugenTrade</span>
     </a>
-    <a class="trade" href="/trading/bchbtc">Trade</a>
+    <a class="trade" href="https://dbx-core.digibitx.com/trading/bchbtc">Trade</a>
 
     <div id="ygn-nav">
         <i class="icon-menu float-right" aria-controls="ygn-nav" aria-expanded="false" aria-label="Toggle navigation"></i>
