--- a/assets/stylesheets/common/_icons.scss
+++ b/assets/stylesheets/common/_icons.scss
@@ -34,8 +34,59 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-ygt-logo:before {
-  content: "\e918";
+.icon-unfold_more:before {
+  content: "\e5d7";
+}
+.icon-thumb-tack:before {
+  content: "\f08d";
+}
+.icon-bitcoin:before {
+  content: "\e91b";
+}
+.icon-caret-right:before {
+  content: "\e91c";
+}
+.icon-caret-left:before {
+  content: "\e91d";
+}
+.icon-caret-up:before {
+  content: "\e91e";
+}
+.icon-caret-down:before {
+  content: "\e91f";
+}
+.icon-print:before {
+  content: "\e919";
+}
+.icon-add:before {
+  content: "\e91a";
+}
+.icon-calculate:before {
+  content: "\e91a";
+}
+.icon-copy:before {
+  content: "\e91a";
+}
+.icon-create:before {
+  content: "\e91a";
+}
+.icon-address-book:before {
+  content: "\e944";
+}
+.icon-trophy:before {
+  content: "\e99e";
+}
+.icon-volume_up:before {
+  content: "\e050";
+}
+.icon-key:before {
+  content: "\e0da";
+}
+.icon-mail:before {
+  content: "\e0e1";
+}
+.icon-ev_station:before {
+  content: "\e56d";
 }
 .icon-arrow_back:before {
   content: "\e5c4";
@@ -46,47 +97,71 @@
 .icon-check:before {
   content: "\e5ca";
 }
-.icon-ev_station:before {
-  content: "\e56d";
-}
-.icon-star:before {
-  content: "\e838";
-}
-.icon-info_outline:before {
-  content: "\e88f";
-}
-.icon-mail:before {
-  content: "\e0e1";
-}
 .icon-menu2:before {
   content: "\e5d2";
 }
 .icon-notifications:before {
   content: "\e7f4";
 }
+.icon-star:before {
+  content: "\e838";
+}
 .icon-star_border:before {
   content: "\e83a";
 }
-.icon-volume_up:before {
-  content: "\e050";
-}
-.icon-key:before {
-  content: "\e0da";
+.icon-info_outline:before {
+  content: "\e88f";
 }
 .icon-id-badge:before {
   content: "\e900";
 }
-.icon-user:before {
-  content: "\e916";
-}
 .icon-wrench:before {
   content: "\e901";
+}
+.icon-arrow-long-down:before {
+  content: "\e902";
+}
+.icon-arrow-long-up:before {
+  content: "\e903";
+}
+.icon-chevron-down:before {
+  content: "\e904";
+}
+.icon-chevron-up:before {
+  content: "\e905";
+}
+.icon-adjust:before {
+  content: "\e906";
+}
+.icon-cog:before {
+  content: "\e907";
+}
+.icon-cross:before {
+  content: "\e908";
+}
+.icon-lifebuoy:before {
+  content: "\e909";
+}
+.icon-light-up:before {
+  content: "\e90a";
+}
+.icon-menu:before {
+  content: "\e90b";
+}
+.icon-v-card:before {
+  content: "\e90c";
+}
+.icon-wallet:before {
+  content: "\e90d";
 }
 .icon-coins:before {
   content: "\e90e";
 }
-.icon-money:before {
-  content: "\e90e";
+.icon-close:before {
+  content: "\e90f";
+}
+.icon-mine:before {
+  content: "\e910";
 }
 .icon-history:before {
   content: "\e911";
@@ -97,61 +172,22 @@
 .icon-funds:before {
   content: "\e913";
 }
-.icon-exchange:before {
-  content: "\e915";
+.icon-signout:before {
+  content: "\e914";
 }
-.icon-adjust:before {
-  content: "\e906";
-}
-.icon-cog:before {
-  content: "\e907";
-}
-.icon-lifebuoy:before {
-  content: "\e909";
-}
-.icon-light-up:before {
-  content: "\e90a";
+.icon-user:before {
+  content: "\e916";
 }
 .icon-megaphone:before {
   content: "\e917";
 }
-.icon-menu:before {
-  content: "\e90b";
-}
-.icon-wallet:before {
-  content: "\e90d";
+.icon-ygt-logo:before {
+  content: "\e918";
 }
 .icon-earth:before {
   content: "\e9ca";
 }
-.icon-close:before {
-  content: "\e90f";
-}
-.icon-mine:before {
-  content: "\e910";
-}
-.icon-signout:before {
-  content: "\e914";
-}
-.icon-arrow-long-down:before {
-  content: "\e902";
-}
-.icon-arrow-long-up:before {
-  content: "\e903";
-}
-.icon-v-card:before {
-  content: "\e90c";
-}
-.icon-chevron-down:before {
-  content: "\e904";
-}
-.icon-chevron-up:before {
-  content: "\e905";
-}
-.icon-cross:before {
-  content: "\e908";
-}
-.icon-print:before {
-  content: "\e919";
+.icon-exchange:before {
+  content: "\e915";
 }
 
