--- a/assets/stylesheets/common/_icons.scss
+++ b/assets/stylesheets/common/_icons.scss
@@ -34,6 +34,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-photo:before {
+  content: "\e432";
+}
 .icon-unfold_more:before {
   content: "\e5d7";
 }
