--- a/app/views/common_assets/shared/_favicons.html.erb
+++ b/app/views/common_assets/shared/_favicons.html.erb
@@ -1,24 +1,22 @@
 <%= favicon_link_tag 'favicons/apple-touch-icon-57x57.png', rel: 'apple-touch-icon', type: 'image/png', sizes: "57x57" %>
-<%= favicon_link_tag 'favicons/apple-touch-icon-60x60.png', rel: 'apple-touch-icon', type: 'image/png', sizes: "60x60" %>
-<%= favicon_link_tag 'favicons/apple-touch-icon-72x72.png', rel: 'apple-touch-icon', type: 'image/png', sizes: "72x72" %>
-<%= favicon_link_tag 'favicons/apple-touch-icon-76x76.png', rel: 'apple-touch-icon', type: 'image/png', sizes: "76x76" %>
-<%= favicon_link_tag 'favicons/apple-touch-icon-114x114.png', rel: 'apple-touch-icon', type: 'image/png', sizes: "114x114" %>
-<%= favicon_link_tag 'favicons/apple-touch-icon-120x120.png', rel: 'apple-touch-icon', type: 'image/png', sizes: "120x120" %>
-<%= favicon_link_tag 'favicons/apple-touch-icon-144x144.png', rel: 'apple-touch-icon', type: 'image/png', sizes: "144x144" %>
-<%= favicon_link_tag 'favicons/apple-touch-icon-152x152.png', rel: 'apple-touch-icon', type: 'image/png', sizes: "152x152" %>
+	<%= favicon_link_tag 'favicons/apple-touch-icon-60x60.png', rel: 'apple-touch-icon', type: 'image/png', sizes: "60x60" %>
+	<%= favicon_link_tag 'favicons/apple-touch-icon-72x72.png', rel: 'apple-touch-icon', type: 'image/png', sizes: "72x72" %>
+	<%= favicon_link_tag 'favicons/apple-touch-icon-76x76.png', rel: 'apple-touch-icon', type: 'image/png', sizes: "76x76" %>
+	<%= favicon_link_tag 'favicons/apple-touch-icon-114x114.png', rel: 'apple-touch-icon', type: 'image/png', sizes: "114x114" %>
+	<%= favicon_link_tag 'favicons/apple-touch-icon-120x120.png', rel: 'apple-touch-icon', type: 'image/png', sizes: "120x120" %>
+	<%= favicon_link_tag 'favicons/apple-touch-icon-144x144.png', rel: 'apple-touch-icon', type: 'image/png', sizes: "144x144" %>
+	<%= favicon_link_tag 'favicons/apple-touch-icon-152x152.png', rel: 'apple-touch-icon', type: 'image/png', sizes: "152x152" %>
 
 
-<%= favicon_link_tag 'favicons/favicon-16x16.png', rel: 'icon', type: 'image/png', sizes: "16x16" %>
-<%= favicon_link_tag 'favicons/favicon-32x32.png', rel: 'icon', type: 'image/png', sizes: "32x32" %>
-<%= favicon_link_tag 'favicons/favicon-96x96.png', rel: 'icon', type: 'image/png', sizes: "96x96" %>
-<%= favicon_link_tag 'favicons/favicon-128.png', rel: 'icon', type: 'image/png', sizes: "128x128" %>
-<%= favicon_link_tag 'favicons/favicon-196x196.png', rel: 'icon', type: 'image/png', sizes: "196x196" %>
+	<%= favicon_link_tag 'favicons/favicon-16x16.png', rel: 'icon', type: 'image/png', sizes: "16x16" %>
+	<%= favicon_link_tag 'favicons/favicon-32x32.png', rel: 'icon', type: 'image/png', sizes: "32x32" %>
+	<%= favicon_link_tag 'favicons/favicon-96x96.png', rel: 'icon', type: 'image/png', sizes: "96x96" %>
+	<%= favicon_link_tag 'favicons/favicon-128.png', rel: 'icon', type: 'image/png', sizes: "128x128" %>
+	<%= favicon_link_tag 'favicons/favicon-196x196.png', rel: 'icon', type: 'image/png', sizes: "196x196" %>
 
-
-<%= tag.meta name: 'msapplication-TileColor', content: '#333333' %>
-<%= tag.meta name: 'msapplication-TileImage', content: asset_path('favicons/mstile-144x144.png') %>
-<%= tag.meta name: 'msapplication-square70x70logo', content: asset_path('favicons/mstile-70x70.png') %>
-<%= tag.meta name: 'msapplication-square150x150logo', content: asset_path('favicons/mstile-150x150.png') %>
-<%= tag.meta name: 'msapplication-wide310x150logo', content: asset_path('favicons/mstile-310x150.png') %>
-<%= tag.meta name: 'msapplication-square310x310logo', content: asset_path('favicons/mstile-310x310.png') %>
-
+	<meta name="msapplication-TileColor" content="#333333">
+	<meta name="msapplication-TileImage" content="<%= asset_path('favicons/mstile-144x144.png') %>">
+	<meta name="msapplication-square70x70logo" content="<%= asset_path('favicons/mstile-70x70.png') %>">
+	<meta name="msapplication-square150x150logo" content="<%= asset_path('favicons/mstile-150x150.png') %>">
+	<meta name="msapplication-wide310x150logo" content="<%= asset_path('favicons/mstile-310x150.png') %>">
+	<meta name="msapplication-square310x310logo" content="<%= asset_path('favicons/mstile-310x310.png') %>">
