--- a/assets/stylesheets/common/_header.scss
+++ b/assets/stylesheets/common/_header.scss
@@ -51,7 +51,7 @@ $menu-bgcolor: #24292d;
 
 	.navbar-brand {
 		font-weight: bold;
-		color: #777777;
+		color: #3e3e3e;
 		position: relative;
 		z-index: 150;
 		padding: 10px 10px 10px 20px;
