Footer links update

--- a/app/views/common_assets/shared/_footer.html.erb
+++ b/app/views/common_assets/shared/_footer.html.erb
@@ -1,17 +1,22 @@
 <footer class="footer">
-    <ul class="links-foot">
-      <li><a href="https://dbx-cms.digibitx.com/pages/about">About</a></li>
-      <li><a href="https://dbx-cms.digibitx.com/pages/terms-of-service">Terms Of Service</a></li>
-      <li><a href="https://dbx-cms.digibitx.com/pages/privacy">Privacy</a></li>
-      <li><a href="https://dbx-cms.digibitx.com/pages/fees">Fees</a></li>
-      <li><a href="https://dbx-cms.digibitx.com/status">Status</a></li>
-      <li><a href="https://dbx-cms.digibitx.com/pages/contact">Contact</a></li>
-    </ul>
+	<ul class="links-foot">
+		<li><a href="https://dbx-cms.digibitx.com/pages/about">About</a></li>
+		<li><a href="https://dbx-cms.digibitx.com/pages/terms-of-service">Terms Of Service</a></li>
+		<li><a href="https://dbx-cms.digibitx.com/pages/privacy">Privacy</a></li>
+		<li><a href="https://dbx-cms.digibitx.com/pages/fees">Fees</a></li>
+		<li><a href="https://dbx-cms.digibitx.com/pages/faq">FAQ</a></li>
+		<li><a href="https://dbx-cms.digibitx.com/pages/blog">Blog</a></li>
+		<li><a href="https://dbx-cms.digibitx.com/pages/security">Security</a></li>
+		<li><a href="https://dbx-cms.digibitx.com/pages/support">Support</a></li>
+		<li><a href="https://status.digibitx.com">Status</a></li>
+		<li><a href="https://dbx-cms.digibitx.com/pages/contact">Contact</a></li>
+	</ul>
 
-    <ul class="social-foot">
-      <li><a href="https://www.facebook.com/YugenTrade" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-      <li><a href="https://twitter.com/YugenTrade" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="https://www.reddit.com/r/YugenTrade" title="Reddit"><i class="fa fa-reddit"></i></a></li>
-    </ul>
-    <div class="clear-fix"></div>
+	<ul class="social-foot">
+		<li><a href="https://www.facebook.com/YugenTrade" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+		<li><a href="https://twitter.com/YugenTrade" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+		<li><a href="https://www.reddit.com/r/YugenTrade" title="Reddit"><i class="fa fa-reddit"></i></a></li>
+	</ul>
+	<div class="clear-fix"></div>
 </footer>
+
