API added to common footer

--- a/app/views/common_assets/shared/_footer.html.erb
+++ b/app/views/common_assets/shared/_footer.html.erb
@@ -7,6 +7,7 @@
 		<li><a href="https://dbx-cms.digibitx.com/pages/faq">FAQ</a></li>
 		<li><a href="https://dbx-cms.digibitx.com/pages/blog">Blog</a></li>
 		<li><a href="https://dbx-cms.digibitx.com/pages/security">Security</a></li>
+		<li><a href="https://dbx-core.digibitx.com/swagger?url=/api/v2/swagger#/deposits">API</a></li>
 		<li><a href="https://dbx-cms.digibitx.com/pages/support">Support</a></li>
 		<li><a href="https://status.digibitx.com">Status</a></li>
 		<li><a href="https://dbx-cms.digibitx.com/pages/contact">Contact</a></li>
