--- a/assets/stylesheets/common/_header.scss
+++ b/assets/stylesheets/common/_header.scss
@@ -50,7 +50,7 @@ $menu-bgcolor: #24292d;
 	}
 
 	.navbar-brand {
-		font-weight: bold;
+		// font-weight: bold;
 		color: #3e3e3e;
 		position: relative;
 		z-index: 150;
