Use Env variables (via figaro gem)

--- a/app/views/common_assets/shared/_footer.html.erb
+++ b/app/views/common_assets/shared/_footer.html.erb
@@ -1,16 +1,16 @@
 <footer class="footer">
 	<ul class="links-foot">
-		<li><a href="https://dbx-cms.digibitx.com/pages/about">About</a></li>
-		<li><a href="https://dbx-cms.digibitx.com/pages/terms-of-service">Terms Of Service</a></li>
-		<li><a href="https://dbx-cms.digibitx.com/pages/privacy">Privacy</a></li>
-		<li><a href="https://dbx-cms.digibitx.com/pages/fees">Fees</a></li>
-		<li><a href="https://dbx-cms.digibitx.com/pages/faq">FAQ</a></li>
-		<li><a href="https://dbx-cms.digibitx.com/pages/blog">Blog</a></li>
-		<li><a href="https://dbx-cms.digibitx.com/pages/security">Security</a></li>
-		<li><a href="https://dbx-core.digibitx.com/swagger?url=/api/v2/swagger#/deposits">API</a></li>
-		<li><a href="https://dbx-cms.digibitx.com/pages/support">Support</a></li>
-		<li><a href="https://status.digibitx.com">Status</a></li>
-		<li><a href="https://dbx-cms.digibitx.com/pages/contact">Contact</a></li>
+		<li><a href="<%= ENV['CMS_DOMAIN'] %>/pages/about">About</a></li>
+		<li><a href="<%= ENV['CMS_DOMAIN'] %>/pages/terms-of-service">Terms Of Service</a></li>
+		<li><a href="<%= ENV['CMS_DOMAIN'] %>/pages/privacy">Privacy</a></li>
+		<li><a href="<%= ENV['CMS_DOMAIN'] %>/pages/fees">Fees</a></li>
+		<li><a href="<%= ENV['CMS_DOMAIN'] %>/pages/faq">FAQ</a></li>
+		<li><a href="<%= ENV['CMS_DOMAIN'] %>/pages/blog">Blog</a></li>
+		<li><a href="<%= ENV['CMS_DOMAIN'] %>/pages/security">Security</a></li>
+		<li><a href="<%= ENV['CORE_DOMAIN'] %>/swagger?url=/api/v2/swagger#/deposits">API</a></li>
+		<li><a href="<%= ENV['CMS_DOMAIN'] %>/pages/support">Support</a></li>
+		<li><a href="<%= ENV['STATUS_DOMAIN'] %>">Status</a></li>
+		<li><a href="<%= ENV['CMS_DOMAIN'] %>/pages/contact">Contact</a></li>
 	</ul>
 
 	<ul class="social-foot">
