Reg/SignIn links moved

--- a/app/views/common_assets/shared/_header.html.erb
+++ b/app/views/common_assets/shared/_header.html.erb
@@ -32,14 +32,14 @@
 
 				</li>
 
-				<% unless current_user %>
-					<li class="hidden-lg hidden-md pages"><hr>
-						<a href="<%= ENV['CORE_DOMAIN'] %>/auth/barong"><button class="btn btn-danger">Register</button></a>
-						<a href="<%= ENV['CORE_DOMAIN'] %>/auth/barong"><button class="btn btn-success">Sign In</button></a>
-					</li>
-				<% end %>
 
 			</ul>
+			<% unless current_user %>
+				<p class="navbar-text float-left d-none d-md-block">
+					<a href="<%= ENV['CORE_DOMAIN'] %>/auth/barong"><button class="btn btn-danger">Register</button></a>
+					<a href="<%= ENV['CORE_DOMAIN'] %>/auth/barong"><button class="btn btn-success">Sign In</button></a>
+				</p>
+			<% end %>
 		</div>
 
 	</div><div class="menu_mask d-none"></div>
