FFooter styling updates

--- a/app/views/common_assets/shared/_footer.html.erb
+++ b/app/views/common_assets/shared/_footer.html.erb
@@ -1,13 +1,13 @@
 <footer class="footer">
 	<div class='container row mx-auto text-left'>
-		<ul class="col-6 col-sm-3 list-unstyled">
+		<ul class="col-6 col-sm-3 list-unstyled mb-4 mb-sm-3">
 			<li class="title"><i class="icon-ygt-logo"></i> YugenTrade</li>
 			<li><a href="<%= ENV['CMS_DOMAIN'] %>/pages/about">About</a></li>
 			<li><a href="<%= ENV['CMS_DOMAIN'] %>/pages/terms-of-service">Terms Of Service</a></li>
 			<li><a href="<%= ENV['CMS_DOMAIN'] %>/pages/privacy">Privacy</a></li>
 			<li><a href="<%= ENV['STATUS_DOMAIN'] %>">Status</a></li>
 		</ul>
-		<ul class="col-6 col-sm-3 list-unstyled">
+		<ul class="col-6 col-sm-3 list-unstyled mb-4 mb-sm-3">
 			<li class="title">Resources</li>
 			<li><a href="<%= ENV['CMS_DOMAIN'] %>/pages/fees">Fees</a></li>
 			<li><a href="<%= ENV['CMS_DOMAIN'] %>/pages/blog">Blog</a></li>
@@ -21,11 +21,11 @@
 			<li><a href="<%= ENV['CMS_DOMAIN'] %>/pages/contact">Contact</a></li>
 		</ul>
 
-		<ul class="social-foot col-sm-3 list-unstyled text-sm-right">
+		<ul class="social-foot col-6 col-sm-3 list-unstyled text-sm-right">
 			<li class="title"><i class="icon-ygt-logo"></i> Community</li>
-			<li><a href="https://www.facebook.com/YugenTrade" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-			<li><a href="https://twitter.com/YugenTrade" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-			<li><a href="https://www.reddit.com/r/YugenTrade" title="Reddit"><i class="fa fa-reddit"></i></a></li>
+			<li><a href="https://www.facebook.com/YugenTrade" title="Facebook"><i class="fa fab fa-facebook"></i></a></li>
+			<li><a href="https://twitter.com/YugenTrade" title="Twitter"><i class="fa fab fa-twitter"></i></a></li>
+			<li><a href="https://www.reddit.com/r/YugenTrade" title="Reddit"><i class="fa fab fa-reddit"></i></a></li>
 			<div class="clearfix"></div>
 			<div class=" pt-3">
 				<p class="copyright m-0 w-100 pt-2">&copy; 2017 - <%= Time.current.year %> YugenTrade.com<br/>
