--- a/assets/stylesheets/common/_footer.scss
+++ b/assets/stylesheets/common/_footer.scss
@@ -34,7 +34,7 @@
 					color: #ff4500;
 				}
 				.fa-facebook {
-					color: #3b5998;
+					color: #6283ca;
 				}
 				.fa-twitter {
 					color: #1da1f2;
