--- a/assets/stylesheets/common/_header.scss
+++ b/assets/stylesheets/common/_header.scss
@@ -143,6 +143,7 @@ $menu-bgcolor: #24292d;
 		p.navbar-text {
 			margin: 5px 10px 5px 5px;
 			padding: 0;
+			cursor: pointer;
 			.btn {
 				display: inline-block;
 				margin-bottom: 0;
