--- a/app/views/common_assets/shared/_header.html.erb
+++ b/app/views/common_assets/shared/_header.html.erb
@@ -5,7 +5,7 @@
 		<i class="icon-ygt-logo"></i>
 		<span>YugenTrade</span>
 	</a>
-	<a class="trade" href="<%= ENV['TRADING_DOMAIN'] %>/trading/bchbtc">Trade</a>
+	<a class="trade" href="<%= ENV['CORE_DOMAIN'] %>/trading/bchbtc">Trade</a>
 
 	<div id="ygn-nav">
 		<i class="icon-menu float-right" aria-controls="ygn-nav" aria-expanded="false" aria-label="Toggle navigation"></i>
