--- a/app/views/common_assets/shared/mailers/_header.html.erb
+++ b/app/views/common_assets/shared/mailers/_header.html.erb
@@ -2,7 +2,8 @@
 	<container>
 		<row class="collapse">
 			<columns small="6">
-				<a href="<%= ENV['CORE_DOMAIN'] %>"><%= render 'common_assets/shared/mailers/logo' %></a>
+				<a href="<%= ENV['CORE_DOMAIN'] %>">
+					<img alt="YugenTrade" src="<%=  image_url('ygn-logotype.png') %>" width="120" style="width: 100%; max-width: 120px; font-family: sans-serif; color: #ffffff; font-size: 20px; display: block; border: 0px;" border="0"></a>
 			</columns>
 			<columns small="6" class="links">
 				<button class="small radius warning btn" href="<%= ENV['CORE_DOMAIN'] %>trading">Trade</button>
