refactor: update all links to vault server

--- a/app/views/common_assets/exceptions/show.html.erb
+++ b/app/views/common_assets/exceptions/show.html.erb
@@ -11,7 +11,7 @@
     <div class="text-center">
         <div class="wrap">
             <p><small>Don't worry, have a donut and try again later</small></p>
-            <p><small>For more information, checkout <a href="https://status.digibitx.com" style="color:#ffbc00;font-weight:bold;">status</a></small>.</p>
+            <p><small>For more information, checkout <a href="<%= Setting.get(:STATUS_DOMAIN) %>" style="color:#ffbc00;font-weight:bold;">status</a></small>.</p>
         </div>
     </div>
 </div>
