Removing double slashes from URLs

--- a/app/views/common_assets/shared/_footer.html.erb
+++ b/app/views/common_assets/shared/_footer.html.erb
@@ -2,23 +2,23 @@
 	<div class='container row mx-auto text-left'>
 		<ul class="col-6 col-sm-3 list-unstyled mb-4 mb-sm-3">
 			<li class="title"><i class="icon-ygt-logo"></i> YugenTrade</li>
-			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/about">About</a></li>
-			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/terms-of-service">Terms Of Service</a></li>
-			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/privacy">Privacy</a></li>
+			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>pages/about">About</a></li>
+			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>pages/terms-of-service">Terms Of Service</a></li>
+			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>pages/privacy">Privacy</a></li>
 			<li><a href="<%= ENV['STATUS_DOMAIN'] %>">Status</a></li>
 		</ul>
 		<ul class="col-6 col-sm-3 list-unstyled mb-4 mb-sm-3">
 			<li class="title">Resources</li>
-			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/fees">Fees</a></li>
-			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/blog">Blog</a></li>
-			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/security">Security</a></li>
-			<li><a href="<%= Setting.get(:CORE_DOMAIN) %>/swagger?url=/api/v2/swagger#/deposits">API</a></li>
+			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>pages/fees">Fees</a></li>
+			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>pages/blog">Blog</a></li>
+			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>pages/security">Security</a></li>
+			<li><a href="<%= Setting.get(:CORE_DOMAIN) %>swagger?url=/api/v2/swagger#/deposits">API</a></li>
 		</ul>
 		<ul class="col-6 col-sm-3 list-unstyled">
 			<li class="title">Help</li>
-			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/faq">FAQ</a></li>
-			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/support">Support</a></li>
-			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/contact">Contact</a></li>
+			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>pages/faq">FAQ</a></li>
+			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>pages/support">Support</a></li>
+			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>pages/contact">Contact</a></li>
 		</ul>
 
 		<ul class="social-foot col-6 col-sm-3 list-unstyled text-sm-right">
